# vizzy_serial_interfaces

./: CMakeLists.txt  README.md  package.xml
battery_state_web/: index.html
include/vizzy_sensors/: VoltageCurrentSerialInterface.hpp
launch/: batteries_state.launch  battery_charging_state.launch  battery_state.launch  kokam_power_publisher.launch  segway_battery_state.launch
scripts/: batteryEmptySpeech.py  battery_state_simulator_service.py
src/: VoltageCurrentSerialInterface.cpp  battery_charging_state_service.cpp  battery_state_service.cpp  kokam_power_publisher.cpp  segway_battery_state_service.cpp  vizzy_batteries_state_service.cpp
