<package>
  <name>vizzy_serial_interfaces</name>
  <version>1.0.0</version>
  <description>

    Contain the serial port interfaces and ROS services for checking the status
    of the batteries (Kokam and Segway).

  </description>
  
  <maintainer email="plinio@isr.tecnico.ulisboa.pt">Plinio Moreno</maintainer>
  <author>Plinio Moreno</author>

  <license>BSD</license>

  <url type="website">https://github.com/vislab-tecnico-lisboa/vizzy_serial_interfaces</url>
  <url type="bugtracker">https://github.com/vislab-tecnico-lisboa/vizzy_serial_interfaces/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>serial</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>python-serial</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>serial</run_depend>

</package>
